--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "angular": "1.3.8",
     "angular-route": "1.3.8",
     "angular-mocks": "1.3.8"
+  },
+  "devDependencies": {
+    "jasmine": "~2.1.3"
   }
 }
